fix thead and tbody border-collapse

--- a/css/workspace.css
+++ b/css/workspace.css
@@ -24,6 +24,7 @@ p:not(:last-child):hover {
 }
 
 .dynamic-table {
+  border-collapse: collapse;
   width: 90%;
   margin: 10px auto;
   border: 1px solid grey;
